--- a/src/conponets/Name/Name.module.scss
+++ b/src/conponets/Name/Name.module.scss
@@ -2,28 +2,48 @@
 
 .wrapper {
   margin-top: 140px;
-  padding: 0 12.8%;
+  width: 74.4%;
+  margin: 0 auto;
+  margin-top: 130px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap-reverse;
+@media (max-width:590px) {
+  flex-direction: column-reverse;
+  width: 100%;
+  margin-top: 55px;
+}
+@include width;
 }
 .acquaintance {
+  @media (max-width:590px) {
+    text-align: center;
+    width: 100%;
+  }
   width: 50%;
   h1 {
-    @include fond(700, 3.3vw, 60px);
+    @include fond(700, 44px, 60px);
     color: $colorFond;
   }
   h4 {
-    @include fond(400, 1.3vw, 24px);
+    @include fond(400, 16px, 24px);
     color: $colorFond;
     padding: 40px 0px 38px 0px;
   }
   button {
     background-color: #ff6464;
     border-radius: 2px;
-    width: 42%;
+    width: 208px;
     height: 47px;
-    @include fond(500,1.2vw,29px);
+    @include fond(500, 20px, 29px);
     color: white;
+  }
+}
+
+.photo {
+  img {
+    width: 243px;
+    height: 243px;
   }
 }
