--- a/src/index.css
+++ b/src/index.css
@@ -4,24 +4,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
- margin: 0px;
- padding: 0px;
- background-color: #E5E5E5;
+  margin: 0px;
+  padding: 0px;
+  background-color: #E5E5E5;
 }
 
-ul,li{
+ul,
+li {
   list-style: none;
   padding: 0;
   margin: 0;
 }
 
-h1,h2,h3,h4,h5,
+h1,
+h2,
+h3,
+h4,
+h5,
 h6 {
-	font-size:100%;
-	font-weight:normal;
+  font-size: 100%;
+  font-weight: normal;
   margin: 0;
   padding: 0;
 }
+
 button {
   padding: 0;
   border: none;
