--- a/src/mixin.scss
+++ b/src/mixin.scss
@@ -1,41 +1,29 @@
-$colorFond:#21243D;
+$colorFond: #21243d;
 
-
-
-@mixin wid{
-    width: 74.4%;
-    margin: 0 auto;
+@mixin wid {
+  width: 74.4%;
+  margin: 0 auto;
 }
 
-@mixin fond($wight,$size,$line) {
-    font-family: 'Heebo';
-    font-style: normal;
-    font-weight: $wight;
-    font-size: $size;
-    line-height: $line;
+@mixin fond($wight, $size, $line) {
+  font-family: "Heebo";
+  font-style: normal;
+  font-weight: $wight;
+  font-size: $size;
+  line-height: $line;
 }
-
-
-
-
 
 @mixin width {
-    @media (max-width:900px) {
-      margin: 0 auto;
-        width: 80%;
-      }
-      @media (max-width:800px) {
-        width: 85%;
-        margin: 0 auto;
-      }
-      @media (max-width:700px) {
-        width: 95%;
-        margin: 0 auto;
-      }
-}
-
-@mixin mobWidth{
-    @media (max-width:590px) {
-      
-      }
+  @media (max-width: 900px) {
+    margin: 0 auto;
+    width: 80%;
+  }
+  @media (max-width: 800px) {
+    width: 85%;
+    margin: 0 auto;
+  }
+  @media (max-width: 700px) {
+    width: 95%;
+    margin: 0 auto;
+  }
 }
