--- a/src/pages/Blog/Blog.module.scss
+++ b/src/pages/Blog/Blog.module.scss
@@ -4,7 +4,7 @@
   width: 60%;
   margin: 0 auto;
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
   @include width;
   h1 {
     margin-top: 120px;
